# rusty-sweeper

./: CHANGELOG.md  Cargo.toml  LICENSE  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_TUI_PLAN.md  PHASE5_PLAN.md  PHASE6_PLAN.md  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
benches/: scanner_bench.rs
scripts/: create-test-fixtures.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/cleaner/: detector.rs  docker.rs  executor.rs  mod.rs  orchestrator.rs  project_scanner.rs  registry.rs  system_cleaner.rs  system_registry.rs
src/commands/: clean.rs  mod.rs  monitor.rs  scan.rs
src/monitor/: daemon.rs  disk.rs  mod.rs  notifier.rs  service.rs  signals.rs  types.rs
src/scanner/: entry.rs  formatter.rs  mod.rs  options.rs  size.rs  walker.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: clean_integration.rs  cli_integration.rs  config_integration.rs  monitor_integration.rs  scan_integration.rs  tui_integration.rs  tui_snapshots.rs
tests/snapshots/: tui_snapshots__confirm_clean_snapshot.snap  tui_snapshots__confirm_clean_snapshot.snap.new  tui_snapshots__confirm_delete_snapshot.snap  tui_snapshots__confirm_delete_snapshot.snap.new  tui_snapshots__empty_app_snapshot.snap  tui_snapshots__help_overlay_snapshot.snap  tui_snapshots__nested_tree_snapshot.snap  tui_snapshots__nested_tree_snapshot.snap.new  tui_snapshots__project_indicator_snapshot.snap  tui_snapshots__project_indicator_snapshot.snap.new  tui_snapshots__scanning_state_snapshot.snap  tui_snapshots__search_mode_snapshot.snap  tui_snapshots__with_tree_snapshot.snap  (+3 more)
(+17 files in other folders)
