[package]
name = "rusty-sweeper"
version = "0.1.0"
edition = "2021"
description = "A Linux disk usage management utility"
license = "MIT OR Apache-2.0"
keywords = ["disk", "cleanup", "tui", "linux", "utility"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]

[dev-dependencies]

[[bin]]
name = "rusty-sweeper"
path = "src/main.rs"
