[package]
name = "rusty-sweeper"
version = "0.1.0"
edition = "2021"
description = "A Linux disk usage management utility"
license = "MIT OR Apache-2.0"
keywords = ["disk", "cleanup", "tui", "linux", "utility"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory scanning
walkdir = "2"
rayon = "1"

# Progress indication
indicatif = "0.17"

# Size formatting
humansize = "2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# System info
nix = { version = "0.29", features = ["fs", "signal", "process"] }

# Desktop notifications
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"
insta = "1.40"

[[bench]]
name = "scanner_bench"
harness = false

[[bin]]
name = "rusty-sweeper"
path = "src/main.rs"
